# RealtimeDB

./: go.mod  go.sum  main.go  readme.md  server.go
avlsortedlist/: list_test.go
bitmap/: bstream.go  tsz.go  tsz_data.go  tsz_test.go
client/: client.go  start.txt
client/rpc/: client.pb.go  client.proto  client_grpc.pb.go
client_c/rpc/: client.pb-c.c  client.pb-c.h  client.proto
client_cpp/: CMakeLists.txt  client.cpp  test_client.cpp
client_cpp/rpc/: client.grpc.pb.cc  client.grpc.pb.h  client.pb.cc  client.pb.h  client.proto
data/test/seg-1600000000000-1600000010001/: data  meta.json
data/test/seg-1600000010001-1600000015999/: data  meta.json
data/testdata/seg-1600000000000-1600000015999/: data  meta.json
data/testdata1gorilla1/seg-1600000000000-1600000015999/: data  meta.json
data/testdata1gorilla2/seg-1600000000000-1600000015999/: data  meta.json
data/testdata1gorilla3/seg-1600000000000-1600000015999/: data  meta.json
data/testdata1simple8b1/seg-1600000000000-1600000015999/: data  meta.json
gorilla/: bstream.go  tsz.go  tsz_data.go  tsz_test.go
openapi/: config.go  query.go  write.go
rpc/: server.pb.go  server.proto  server_grpc.pb.go
rtdb/: compressor.go  config.go  disk_segment.go  encoding.go  index.go  memory_segment.go  metadata.go  options.go  rtdb.go  segment.go  series.go  tag.go  wal.go
simple8b/: bstream.go  simple8b_test.go  tsz.go  tsz_data.go  tsz_test.go
sortedlist/: list.go  list_test.go
tests/: rtdb_test.go  store_test.go  tags_test.go  write_read_test.go  write_test.go
(+9 files in other folders)
